@startuml
class com.example.myapplication.views.parentclass.ListenerRoomActivity {
# Toolbar toolBar
# MaterialButton leaveRoom
# Button start
# Button stop
# Button cancel
# TextView recognizeState
# TextView volume
# EditText recognizeResult
# WebSocket websocket
# Handler handler
- ProgressDialog progressDialog
- String meetingId
- String meetingStatus
~ UserLocalStore userLocalStore
~ Context c
+ {static} MediaType JSON
# void onCreate(Bundle)
+ void closeWebSocket()
+ void passHandlerResult(EditText,Handler)
+ void initView()
- void callMeetingRecord()
}
class com.example.myapplication.views.parentclass.ListenerRoomActivity.SocketListImpl {
+ void onMessage(String)
}
class com.example.myapplication.views.parentclass.SpeakerASRRoomActivity {
# WebSocket websocket
# Toolbar toolBar
# MaterialButton leaveRoom
# Button start
# Button stop
# Button cancel
# TextView recognizeState
# TextView volume
# EditText recognizeResult
# int currentRequestId
~ Map<String,String> jsonOutput
# Handler handler
- {static} Logger logger
~ int MY_PERMISSIONS_REQUEST_READ_EXTERNAL_STORAGE
~ AAIClient aaiClient
~ AbsCredentialProvider credentialProvider
- String PERFORMANCE_TAG
- boolean switchToDeviceAuth
~ UserLocalStore userLocalStore
- String engineModelType
- String meetingId
# ProgressDialog progressDialog
+ {static} MediaType JSON
~ LinkedHashMap<String,String> resMap
- void checkPermissions()
- void addPermission(List<String>,String)
- String buildMessage(Map<String,String>)
# void onCreate(Bundle)
+ void initView()
# void onDestroy()
+ void onMessage(String)
- void setUp_ReturnToolbar()
- void callEndMeeting()
}
class com.example.myapplication.views.parentclass.SpeakerASRRoomActivity.SocketListImpl {
+ void onMessage(String)
}


androidx.appcompat.app.AppCompatActivity <|-- com.example.myapplication.views.parentclass.ListenerRoomActivity
com.example.myapplication.views.parentclass.ListenerRoomActivity +.. com.example.myapplication.views.parentclass.ListenerRoomActivity.SocketListImpl
com.example.myapplication.views.parentclass.SocketListener <|.. com.example.myapplication.views.parentclass.ListenerRoomActivity.SocketListImpl
com.tencent.iot.speech.asr.listener.MessageListener <|.. com.example.myapplication.views.parentclass.SpeakerASRRoomActivity
androidx.appcompat.app.AppCompatActivity <|-- com.example.myapplication.views.parentclass.SpeakerASRRoomActivity
com.example.myapplication.views.parentclass.SpeakerASRRoomActivity +.. com.example.myapplication.views.parentclass.SpeakerASRRoomActivity.SocketListImpl
com.example.myapplication.views.parentclass.SocketListener <|.. com.example.myapplication.views.parentclass.SpeakerASRRoomActivity.SocketListImpl
@enduml